--- a/data/index.htm
+++ b/data/index.htm
@@ -7,6 +7,7 @@
     <title id="Titel">Dashboard</title>
     <script type="text/javascript" src="index.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 </head>
 <body>
   <iframe name="dummy" style="display:none;"></iframe>
