--- a/data/index.htm
+++ b/data/index.htm
@@ -47,15 +47,15 @@
         <table style="width: 98%" BORDER="0">
           <tr>
             <td style="width: 100px;">Device Name:</td>
-            <td><input type="text" id="DevNameInput" name="DevName" value="" style="height: 17px;border: 0px; width: 98% " ></td>
+            <td><input type="text" id="DevNameInput" name="DevName" value=""></td>
           </tr>
         <tr>
-          <td>eMShome IP:</td>
-          <td><input type="text" id="eMShomeIP" name="eMShomeIP" value="" style="height: 17px;border: 0px;width: 98% " ></td>
+          <td>eMS home IP:</td>
+          <td><input type="text" id="eMShomeIP" name="eMShomeIP" value=""></td>
         </tr>
         <tr>
-          <td>eMShome PW:</td>
-          <td><input type="text" id="eMShomePW" name="eMShomePW" value="" style="height: 17px;border: 0px;width: 98% " ></td>
+          <td>eMS home PW:</td>
+          <td><input type="text" id="eMShomePW" name="eMShomePW" value=""></td>
         </tr>         
        
       </table>
@@ -65,7 +65,7 @@
     </div>
 
     <div>
-      <br><b>Power consuption:</b> <hr>
+      <br><b>Power consumption:</b> <hr>
       <table BORDER="0">
         <tr>
           <th style="text-align:right; width: 50px">L1</th>
@@ -103,17 +103,17 @@
               <td style="text-align:center">  
                 <label class="switch">
                   <input type="checkbox" id="OUT1" name="OUT1" onclick="this.form.submit()">
-                  <span class="slider round"></span>
+                  <span class="slider"></span>
                 </label>
               </td><td style="text-align:center">  
                 <label class="switch">
                   <input type="checkbox" id="OUT2" name="OUT2" onclick="this.form.submit()">
-                  <span class="slider round"></span>
+                  <span class="slider"></span>
                 </label>
               </td><td style="text-align:center">  
                 <label class="switch">
                   <input type="checkbox" id="OUT3" name="OUT3" onclick="this.form.submit()">
-                  <span class="slider round"></span>
+                  <span class="slider"></span>
                 </label>
               </td> 
             </tr>
