--- a/data/setup.htm
+++ b/data/setup.htm
@@ -20,7 +20,7 @@
     </div>   
 
     <div>
-    <form action="config.post" method="post" target="dummy">
+    <form action="setup.post" method="post" target="dummy">
       <br>
       <div>
         <b>Setup:</b> <span style="float:right;">MAC:&nbsp; &nbsp; <span id="MAC">45:sd:sd:sd:54:ss</span></span> 
@@ -32,11 +32,11 @@
         </tr>
         <tr>
             <td>PSK:</td>
-            <td><input type="text" id="PSK" name="PSK" value="Test"> </td>
+            <td><input type="text" id="PSK" name="PSK" value=""> </td>
         </tr>
         <tr>
             <td>Device Name:</td>
-            <td><input type="text" id="DevNameInput" name="DevNameInput" value=""></td>
+            <td><input type="text" id="DevNameInput" name="DevName" value=""></td>
         </tr>
         <tr>
             <td>eMS home IP:</td>
@@ -46,7 +46,6 @@
             <td>eMS home PW:</td>
             <td><input type="text" id="eMShomePW" name="eMShomePW" value=""></td>
         </tr>         
-       
       </table>
       <br>
       <button type="submit" >Save</button> 
